// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> renders bordered 1`] = `
<div
  className="responsive_wrapper-0-2-10"
>
  <table
    className="table-0-2-1 table_bordered-0-2-2"
  >
    Bordered
  </table>
</div>
`;

exports[`<Table /> renders compact 1`] = `
<div
  className="responsive_wrapper-0-2-10"
>
  <table
    className="table-0-2-1 table_compact-0-2-3"
  >
    Compact
  </table>
</div>
`;

exports[`<Table /> renders fixed 1`] = `
<div
  className="responsive_wrapper-0-2-10"
>
  <table
    className="table-0-2-1 table_fixed-0-2-5"
  >
    Fixed
  </table>
</div>
`;

exports[`<Table /> renders horizontal 1`] = `
<div
  className="responsive_wrapper-0-2-10"
>
  <table
    className="table-0-2-1 table_horizontal-0-2-4"
  >
    Horizontal
  </table>
</div>
`;

exports[`<Table /> renders loading 1`] = `
<div
  className="responsive_wrapper-0-2-10"
>
  <table
    className="table-0-2-1 table_loading-0-2-6"
  >
    Loading
  </table>
</div>
`;

exports[`<Table /> renders middleAlign 1`] = `
<div
  className="responsive_wrapper-0-2-10"
>
  <table
    className="table-0-2-1 content_middle_align-0-2-11"
  >
    Vertical
  </table>
</div>
`;

exports[`<Table /> renders striped 1`] = `
<div
  className="responsive_wrapper-0-2-10"
>
  <table
    className="table-0-2-1 table_striped-0-2-7"
  >
    Striped
  </table>
</div>
`;

exports[`<Table /> renders transparent 1`] = `
<div
  className="responsive_wrapper-0-2-10"
>
  <table
    className="table-0-2-1 table_transparent-0-2-8"
  >
    Transparent
  </table>
</div>
`;

exports[`<Table /> renders vertical 1`] = `
<div
  className="responsive_wrapper-0-2-10"
>
  <table
    className="table-0-2-1 table_vertical-0-2-9"
  >
    Vertical
  </table>
</div>
`;
